force-app/main/default/objects/CrossObjectFormulaOveruse__c/CrossObjectFormulaOveruse__c.object-meta.xml
<CustomObject>
    <label>CrossObjectFormulaOveruse</label>
    <nameField>
        <label>CrossObjectFormulaOveruse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CrossObjectFormulaOveruse</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>