force-app/main/default/objects/CrossObjectFormulaOveruse__c/fields/Field10__c.field-meta.xml
<CustomField>
    <fullName>Field10__c</fullName>
    <formula>$User.FirstName  &amp;  $User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field10</label>
    <type>Text</type>
</CustomField>