force-app/main/default/objects/CrossObjectFormulaOveruse__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <formula>$User.FirstName  &amp;  $User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field1</label>
    <type>Text</type>
</CustomField>